--- a/programming-languages/javascript/canvas/game/index.html
+++ b/programming-languages/javascript/canvas/game/index.html
@@ -7,6 +7,6 @@
     <title>Game</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <script src="./game.js"></script>
 </body>
 </html>
