[Languages][JavaScript] Canvas - Draw image and save

--- a/programming-languages/javascript/canvas/draw-image-save/index.html
+++ b/programming-languages/javascript/canvas/draw-image-save/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Draw image and save</title>
-</head>
-<body>
+  </head>
+  <body>
+    <style>
+      canvas,
+      .canvas-toolbox {
+        border: 1px solid #000;
+      }
+
+      .canvas-toolbox {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+      }
+
+      button {
+        padding: 25px;
+        display: inline-block;
+      }
+    </style>
     <script src="./draw-image-save.js"></script>
-</body>
+  </body>
 </html>
